Update concertable.yml secret

--- a/.github/workflows/concertable.yml
+++ b/.github/workflows/concertable.yml
@@ -62,7 +62,7 @@ jobs:
       with:
         app-name: ${{ env.AZURE_WEBAPP_NAME }}
         package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
-        publish-profile: ${{ secrets.concertable_497C }}
+        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
     - name: Azure Login
       uses: azure/login@v1
       with:
