--- a/Web/appsettings.Development.json
+++ b/Web/appsettings.Development.json
@@ -7,5 +7,6 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "GoogleApiKey": "AIzaSyBjQlmmYbUsgAy1B6Vmyzwrs_Y4Vx7Oj80";
 }
