--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -21,7 +21,9 @@
     "@angular/platform-browser": "^19.1.5",
     "@angular/platform-browser-dynamic": "^19.1.5",
     "@angular/router": "^19.1.5",
+    "@stripe/stripe-js": "^5.6.0",
     "lodash": "^4.17.21",
+    "ngx-stripe": "^19.0.0",
     "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -33,6 +35,7 @@
     "@angular/compiler-cli": "^19.0.0",
     "@types/jasmine": "~5.1.0",
     "@types/lodash": "^4.17.15",
+    "@types/stripe-v3": "^3.1.33",
     "jasmine-core": "~5.4.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
