--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -10,6 +10,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/build-angular": "^19.1.8",
     "@angular/animations": "^19.1.5",
     "@angular/cdk": "^19.1.3",
     "@angular/common": "^19.1.5",
@@ -21,6 +22,7 @@
     "@angular/platform-browser": "^19.1.5",
     "@angular/platform-browser-dynamic": "^19.1.5",
     "@angular/router": "^19.1.5",
+    "@microsoft/signalr": "^8.0.7",
     "@stripe/stripe-js": "^5.6.0",
     "lodash": "^4.17.21",
     "ngx-stripe": "^19.0.0",
@@ -30,7 +32,6 @@
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.0.1",
     "@angular/cli": "^19.0.1",
     "@angular/compiler-cli": "^19.0.0",
     "@types/jasmine": "~5.1.0",
