--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -28,6 +28,7 @@
     "ngx-stripe": "^19.0.0",
     "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
+    "swiper": "^11.2.6",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
