--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "^19.1.5",
     "@microsoft/signalr": "^8.0.7",
     "@stripe/stripe-js": "^5.6.0",
+    "date-fns": "^4.1.0",
     "lodash": "^4.17.21",
     "ngx-stripe": "^19.0.0",
     "ngx-toastr": "^19.0.0",
@@ -33,17 +34,20 @@
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular/cli": "^19.0.1",
+    "@angular/cli": "^19.2.5",
     "@angular/compiler-cli": "^19.0.0",
     "@types/jasmine": "~5.1.0",
     "@types/lodash": "^4.17.15",
     "@types/stripe-v3": "^3.1.33",
+    "autoprefixer": "^10.4.21",
     "jasmine-core": "~5.4.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17",
     "typescript": "~5.6.2"
   }
 }
