--- a/.github/workflows/master_concertable-app.yml
+++ b/.github/workflows/master_concertable-app.yml
@@ -17,7 +17,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-
+        with:
+          path: .
       - name: Set up node.js
         uses: actions/setup-node@v3
         with:
