--- a/.github/workflows/master_concertable-app.yml
+++ b/.github/workflows/master_concertable-app.yml
@@ -1,3 +1,6 @@
+# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
+# More GitHub Actions for Azure: https://github.com/Azure/actions
+
 name: Build and deploy ASP.Net Core app to Azure Web App - concertable-app
 
 on:
@@ -10,7 +13,7 @@ jobs:
   build:
     runs-on: windows-latest
     permissions:
-      contents: read
+      contents: read #This is required for actions/checkout
 
     steps:
       - uses: actions/checkout@v4
@@ -19,44 +22,32 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '20'
-
+      
       - name: Install Angular CLI
         run: npm install -g @angular/cli@18
-
+      
       - name: Install dependencies and build Angular app
         run: |
           cd ClientApp
           npm install
           ng build --configuration production
 
-      - name: Set up .NET
+      - name: Set up .NET Core
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: '8.x'
 
-      - name: Install EF Core CLI
-        run: |
-          dotnet tool install --global dotnet-ef
-          echo "$HOME/.dotnet/tools" >> $GITHUB_PATH
+      - name: Build with dotnet
+        run: dotnet build --configuration Release
 
-      - name: Build app
-        run: dotnet build --configuration Release --no-restore -o ${{env.DOTNET_ROOT}}/myapp
+      - name: dotnet publish
+        run: dotnet publish -c Release -o "${{env.DOTNET_ROOT}}/myapp"
 
-      - name: Create EF Migrations Bundle
-        run: |
-          dotnet ef migrations bundle --project Infrastructure/Infrastructure.csproj --startup-project Web/Web.csproj --output efbundle
-
-      - name: Upload published app
+      - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: .net-app
           path: ${{env.DOTNET_ROOT}}/myapp
-
-      - name: Upload EF migration bundle
-        uses: actions/upload-artifact@v4
-        with:
-          name: efbundle
-          path: efbundle
 
   deploy:
     runs-on: windows-latest
@@ -65,22 +56,14 @@ jobs:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
-      id-token: write
-      contents: read
+      id-token: write #This is required for requesting the JWT
+      contents: read #This is required for actions/checkout
 
     steps:
-      - name: Download app artifact
+      - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
           name: .net-app
-
-      - name: Download EF migration bundle
-        uses: actions/download-artifact@v4
-        with:
-          name: efbundle
-
-      - name: Run EF Migrations
-        run: ./efbundle --connection "${{ secrets.PROD_SQL_CONNECTION_STRING }}"
 
       - name: Login to Azure
         uses: azure/login@v2
@@ -88,6 +71,15 @@ jobs:
           client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_C9668E43E2494432944F93DFACC9E5F8 }}
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_BF851F2B73B645C298E688BCE825E9A3 }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_03CB9942E6EE42FEA473D19267A56D03 }}
+
+      - name: Install EF Core CLI
+        run: dotnet tool install --global dotnet-ef
+
+      - name: Create EF Migration Bundle
+        run: dotnet ef migrations bundle --project Infrastructure/Infrastructure.csproj --output efbundle
+
+      - name: Run EF Migrations
+        run: ./efbundle --connection "${{ secrets.PROD_SQL_CONNECTION_STRING }}"
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
