--- a/.github/workflows/master_concertable-app.yml
+++ b/.github/workflows/master_concertable-app.yml
@@ -75,6 +75,11 @@ jobs:
       - name: Install EF Core CLI
         run: dotnet tool install --global dotnet-ef
 
+      - name: DEBUG - Show Infrastructure directory contents
+        run: |
+          echo "WORKSPACE: ${{ github.workspace }}"
+          dir ${{ github.workspace }}\Infrastructure
+
       - name: Create EF Migration Bundle
         run: dotnet ef migrations bundle --project Infrastructure/Infrastructure.csproj --output efbundle
         working-directory: ${{ github.workspace }}
