--- a/Web/appsettings.Production.json
+++ b/Web/appsettings.Production.json
@@ -1,5 +1,9 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "Server=tcp:concertable-sql-server.database.windows.net,1433;Initial Catalog=Concertable;Persist Security Info=False;User ID=sqladmin;Password=Password11!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  },
+  "AzureBlobStorage": {
+    "ContainerName": "images"
   }
 }
+
