--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -32,4 +32,8 @@
     <ProjectReference Include="..\Application\Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Background\" />
+  </ItemGroup>
+
 </Project>
