--- a/Web/appsettings.json
+++ b/Web/appsettings.json
@@ -1,9 +1,12 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Debug", 
-      "Microsoft.AspNetCore": "Debug" 
+      "Default": "Debug",
+      "Microsoft.AspNetCore": "Debug"
     }
+  },
+  "Email": {
+    "From": "tommyboy4050@outlook.com"
   },
   "AllowedHosts": "*"
 }
