--- a/.github/workflows/master_concertable-app.yml
+++ b/.github/workflows/master_concertable-app.yml
@@ -95,4 +95,4 @@ jobs:
         with:
           app-name: 'concertable-app'
           slot-name: 'Production'
-          package: .
+          package: ${{ github.workspace }}/myapp
