--- a/.github/workflows/master_concertable-app.yml
+++ b/.github/workflows/master_concertable-app.yml
@@ -19,10 +19,10 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '20'
-      
+
       - name: Install Angular CLI
         run: npm install -g @angular/cli@18
-      
+
       - name: Install dependencies and build Angular app
         run: |
           cd ClientApp
@@ -34,17 +34,20 @@ jobs:
         with:
           dotnet-version: '8.x'
 
+      - name: Restore .NET dependencies
+        run: dotnet restore
+
       - name: Build with dotnet
         run: dotnet build --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish -c Release -o "${{ github.workspace }}/myapp"  # Publish directly to GitHub workspace
+        run: dotnet publish -c Release -o "${{env.DOTNET_ROOT}}/myapp"
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: .net-app
-          path: ${{ github.workspace }}/myapp  # Upload the correct published app
+          path: ${{env.DOTNET_ROOT}}/myapp
 
   deploy:
     runs-on: windows-latest
@@ -58,11 +61,11 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-
+        
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
-          name: .net-app  # Correct artifact name
+          name: .net-app
 
       - name: Login to Azure
         uses: azure/login@v2
@@ -80,9 +83,10 @@ jobs:
           dir ${{ github.workspace }}\Infrastructure
 
       - name: Create EF Migration Bundle
-        run: dotnet ef migrations bundle --project Infrastructure/Infrastructure.csproj --startup-project Web/Web.csproj --output efbundle
+        run: |
+          dotnet ef migrations bundle --project Infrastructure/Infrastructure.csproj --startup-project Web/Web.csproj --output efbundle
         working-directory: ${{ github.workspace }}
-
+        
       - name: Run EF Migrations
         run: ./efbundle --connection "${{ secrets.PROD_SQL_CONNECTION_STRING }}"
 
@@ -92,4 +96,4 @@ jobs:
         with:
           app-name: 'concertable-app'
           slot-name: 'Production'
-          package: ${{ github.workspace }}/myapp  # Ensure the correct path is referenced here
+          package: ${{env.DOTNET_ROOT}}/myapp
