--- a/.github/workflows/master_concertable-app.yml
+++ b/.github/workflows/master_concertable-app.yml
@@ -1,4 +1,4 @@
-name: Build and deploy ASP.Net Core app to Azure Web App - concertable-app
+name: Build and Deploy ASP.Net Core App to Azure Web App - concertable-app
 
 on:
   push:
@@ -7,6 +7,7 @@ on:
   workflow_dispatch:
 
 jobs:
+  # Build Job
   build:
     runs-on: windows-latest
     permissions:
@@ -41,17 +42,18 @@ jobs:
         run: dotnet build --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish -c Release -o "${{env.DOTNET_ROOT}}/myapp"
+        run: dotnet publish -c Release -o "${{ env.DOTNET_ROOT }}/myapp"
 
-      - name: Upload artifact for deployment job
+      - name: Upload build artifact
         uses: actions/upload-artifact@v4
         with:
-          name: .net-app
-          path: ${{env.DOTNET_ROOT}}/myapp
+          name: myapp
+          path: ${{ env.DOTNET_ROOT }}/myapp
 
+  # Deploy Job
   deploy:
-    runs-on: windows-latest
-    needs: build
+    runs-on: ubuntu-latest
+    needs: build # Make sure this job runs after the build job
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
@@ -61,32 +63,20 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-        
-      - name: Download artifact from build job
+
+      - name: Download build artifact
         uses: actions/download-artifact@v4
         with:
-          name: .net-app
-
-      - name: Login to Azure
-        uses: azure/login@v2
-        with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_C9668E43E2494432944F93DFACC9E5F8 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_BF851F2B73B645C298E688BCE825E9A3 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_03CB9942E6EE42FEA473D19267A56D03 }}
+          name: myapp
 
       - name: Install EF Core CLI
         run: dotnet tool install --global dotnet-ef
-
-      - name: DEBUG - Show Infrastructure directory contents
-        run: |
-          echo "WORKSPACE: ${{ github.workspace }}"
-          dir ${{ github.workspace }}\Infrastructure
 
       - name: Create EF Migration Bundle
         run: |
           dotnet ef migrations bundle --project Infrastructure/Infrastructure.csproj --startup-project Web/Web.csproj --output efbundle
         working-directory: ${{ github.workspace }}
-        
+
       - name: Run EF Migrations
         run: ./efbundle --connection "${{ secrets.PROD_SQL_CONNECTION_STRING }}"
 
@@ -96,4 +86,4 @@ jobs:
         with:
           app-name: 'concertable-app'
           slot-name: 'Production'
-          package: ${{env.DOTNET_ROOT}}/myapp
+          package: './myapp' # Path to the downloaded build artifact
