--- a/.github/workflows/master_concertable-app.yml
+++ b/.github/workflows/master_concertable-app.yml
@@ -12,11 +12,11 @@ on:
 jobs:
   build:
     runs-on: windows-latest
-    permissions:
-      contents: read  # This is required for actions/checkout
 
     env:
-      PROJECT_PATH: ./API  # Assuming the .NET project is in the API folder
+      CLIENT_APP_PATH: ./ClientApp
+      INFRASTRUCTURE_PATH: ./Infrastructure
+      PROJECT_PATH: ./Web
 
     steps:
       - uses: actions/checkout@v4
@@ -25,13 +25,13 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '20'
-
+      
       - name: Install Angular CLI
         run: npm install -g @angular/cli@18
-
+      
       - name: Install dependencies and build Angular app
         run: |
-          cd ClientApp
+          cd ${{ env.CLIENT_APP_PATH }}
           npm install
           ng build --configuration production
 
@@ -40,21 +40,17 @@ jobs:
         with:
           dotnet-version: '8.x'
 
-      # Add the dotnet restore step to ensure that all NuGet packages are restored
-      - name: Restore .NET packages
-        run: dotnet restore ${{env.PROJECT_PATH}}
-
       - name: Build with dotnet
-        run: dotnet build ${{env.PROJECT_PATH}} --configuration Release
+        run: dotnet build ${{ env.PROJECT_PATH }} --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish ${{env.PROJECT_PATH}} -c Release -o "${{env.DOTNET_ROOT}}/myapp"
+        run: dotnet publish ${{ env.PROJECT_PATH }} -c Release -o "${{ env.DOTNET_ROOT }}/myapp"
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: .net-app
-          path: ${{env.DOTNET_ROOT}}/myapp
+          path: ${{ env.DOTNET_ROOT }}/myapp
 
   deploy:
     runs-on: windows-latest
@@ -63,10 +59,12 @@ jobs:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
-      id-token: write  # This is required for requesting the JWT
-      contents: read  # This is required for actions/checkout
+      id-token: write #This is required for requesting the JWT
+      contents: read #This is required for actions/checkout
 
     steps:
+      - uses: actions/checkout@v4
+
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
@@ -88,9 +86,9 @@ jobs:
           dir ${{ github.workspace }}\Infrastructure
 
       - name: Create EF Migration Bundle
-        run: dotnet ef migrations bundle --project Infrastructure/Infrastructure.csproj --startup-project Web/Web.csproj --output efbundle
+        run: dotnet ef migrations bundle --project ${{ env.INFRASTRUCTURE_PATH }}/Infrastructure.csproj --startup-project ${{ env.PROJECT_PATH }}/Web.csproj --output efbundle
         working-directory: ${{ github.workspace }}
-
+        
       - name: Run EF Migrations
         run: ./efbundle --connection "${{ secrets.PROD_SQL_CONNECTION_STRING }}"
 
