--- a/.github/workflows/master_concertable-app.yml
+++ b/.github/workflows/master_concertable-app.yml
@@ -12,10 +12,11 @@ on:
 jobs:
   build:
     runs-on: windows-latest
+    permissions:
+      contents: read #This is required for actions/checkout
 
     env:
       CLIENT_APP_PATH: ./ClientApp
-      INFRASTRUCTURE_PATH: ./Infrastructure
       PROJECT_PATH: ./Web
 
     steps:
@@ -44,13 +45,13 @@ jobs:
         run: dotnet build ${{ env.PROJECT_PATH }} --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish ${{ env.PROJECT_PATH }} -c Release -o "${{ env.DOTNET_ROOT }}/myapp"
+        run: dotnet publish ${{ env.PROJECT_PATH }} -c Release -o "${{env.DOTNET_ROOT}}/myapp"
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: .net-app
-          path: ${{ env.DOTNET_ROOT }}/myapp
+          path: ${{env.DOTNET_ROOT}}/myapp
 
   deploy:
     runs-on: windows-latest
@@ -64,7 +65,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-
+        
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
@@ -86,7 +87,7 @@ jobs:
           dir ${{ github.workspace }}\Infrastructure
 
       - name: Create EF Migration Bundle
-        run: dotnet ef migrations bundle --project ${{ env.INFRASTRUCTURE_PATH }}/Infrastructure.csproj --startup-project ${{ env.PROJECT_PATH }}/Web.csproj --output efbundle
+        run: dotnet ef migrations bundle --project ${{ github.workspace }}/Infrastructure/Infrastructure.csproj --startup-project ${{ github.workspace }}/Web/Web.csproj --output efbundle
         working-directory: ${{ github.workspace }}
         
       - name: Run EF Migrations
