--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -26,6 +26,7 @@
     "@stripe/stripe-js": "^5.6.0",
     "date-fns": "^4.1.0",
     "lodash": "^4.17.21",
+    "ngx-material-timepicker": "^13.1.1",
     "ngx-stripe": "^19.0.0",
     "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
